--- a/app/globals.css
+++ b/app/globals.css
@@ -110,6 +110,10 @@ html, body {
   transition: transform 0.6s;
   transform-style: preserve-3d;
   position: relative;
+  
+width: 100%;
+height: 100%;
+
 }
 .flip-front, .flip-back {
   backface-visibility: hidden;
@@ -118,5 +122,8 @@ html, body {
   height: 100%;
 }
 .flip-back {
+  transform: rotateY(180deg);
+}
+.rotate-y-180 {
   transform: rotateY(180deg);
 }
