--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -74,21 +75,22 @@
 
 
 @layer base {
-  html, body {
-    height: 100%;
-    
 
+  html,
+  body {
+    height: 100%;
   }
+
   body {
     @apply bg-background text-foreground;
-    @apply antialiased;
+    /* @apply antialiased; */
   }
 }
 
-.flip-back{
-  color:white;
- background: linear-gradient(135deg, #6C38FF, #A040FC, #D063FD);
-  
+.flip-back {
+  color: white;
+  background: linear-gradient(135deg, #6C38FF, #A040FC, #D063FD);
+
 }
 
 body {
@@ -101,8 +103,10 @@ body {
   }
 }
 
-html, body {
+html,
+body {
   height: 100%;
+  display: flex; 
   flex-direction: column;
   align-items: center;
   justify-content: start;
@@ -111,24 +115,29 @@ html, body {
 .flip-card {
   perspective: 1000px;
 }
+
 .flip-inner {
   transition: transform 0.6s;
   transform-style: preserve-3d;
   position: relative;
-  
-width: 100%;
-height: 100%;
+
+  width: 100%;
+  height: 100%;
 
 }
-.flip-front, .flip-back {
+
+.flip-front,
+.flip-back {
   backface-visibility: hidden;
   position: absolute;
   width: 100%;
   height: 100%;
 }
+
 .flip-back {
   transform: rotateY(180deg);
 }
+
 .rotate-y-180 {
   transform: rotateY(180deg);
 }
