--- a/app/globals.css
+++ b/app/globals.css
@@ -72,11 +72,17 @@
   }
 }
 
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 
 @layer base {
   html, body {
     height: 100%;
-    
+    display:flex;
+    width:100%;
 
   }
   body {
