--- a/app/globals.css
+++ b/app/globals.css
@@ -113,6 +113,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(135deg,  #4f0892, #6c0697);;
 }
 
 @layer utilities {
